--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@tsparticles/react": "^3.0.0",
     "animate.css": "^4.1.1",
     "cra-template": "1.2.0",
+    "gh-pages": "^6.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.1.0",
@@ -19,8 +20,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
+  "homepage": "https://present08.github.io/portfolio/",
   "eslintConfig": {
     "extends": [
       "react-app",
